--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ workflows:
 jobs:
   build:
 
-#    working_directory: ~/Flats.io
+    working_directory: ~/project
 
     docker:
       - image: circleci/openjdk:latest
