--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
           path: target/surefire-reports
 
       - store_artifacts:
-          path: target/Fkats_io.jar
+          path: target/Flats_io.jar
 
 #      - run: bash <(curl -s https://codecov.io/bash)
 
