--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>io</groupId>
     <artifactId>flats</artifactId>
     <version>0.0.1</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>Flats</name>
     <description>Flats.io совершенно новый сервис для продажи квартир.</description>
     <properties>
