Добавлен Code Coverage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ jobs:
       - run: # run code coverage report
           name: code-coverage
           command: npm run coverage
-      - coveralls/upload
+#      - coveralls/upload
       - store_artifacts: # special step to save test results as as artifact
           # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: test-results
