Добавлена автоматическая генерация в базу данных. Обновлена сущность Flat.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.initialization-mode=always
 server.error.path=/errors
 
+spring.datasource.data=classpath:dev-postgres.sql
+
 server.port=8081
 
 
