--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,12 @@ orbs:
   codecov: codecov/codecov@1.1.1
   coveralls: coveralls/coveralls@1.0.4
 
+general:
+  branches:
+    only:
+      - master # list of branches to build
+      - develop
+
 workflows:
   version: 2
   build-deploy:
