--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.7.1",
     "bootstrap": "^4.0.0-alpha.6",
     "react": "^17.0.1",
+    "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
