Убрано поле роли в UserDtoPayload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ server.error.path=/errors
 spring.datasource.data=classpath:dev-postgres.sql
 
 jwt.secret=secret
+jwt.expiration.access=900000
+jwt.expiration.refresh=84600000
 
 server.port=8081
 
