--- a/react-app/package.json
+++ b/react-app/package.json
@@ -40,6 +40,10 @@
     ]
   },
   "devDependencies": {
-    "react-router-dom": "^5.2.0"
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
+    "formik": "^2.2.6",
+    "react-router-dom": "^5.2.0",
+    "yup": "^0.32.9"
   }
 }
