--- a/react-app/package.json
+++ b/react-app/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.1",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^0.32.1",
+    "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
@@ -43,7 +44,9 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "formik": "^2.2.6",
+    "prop-types": "^15.7.2",
     "react-router-dom": "^5.2.0",
+    "universal-cookie": "^4.0.4",
     "yup": "^0.32.9"
   }
 }
