--- a/react-app/package.json
+++ b/react-app/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^0.32.1",
     "react-cookie": "^4.0.3",
     "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
     "react-scripts": "4.0.2",
     "web-vitals": "^1.1.0"
   },
