--- a/react-app/package.json
+++ b/react-app/package.json
@@ -4,17 +4,27 @@
   "private": true,
   "proxy": "http://127.0.0.1:8081/",
   "dependencies": {
+    "@autoaddress.ie/autoaddress-react": "^1.0.5",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
+    "@unicef/material-ui-currency-textfield": "^0.8.6",
     "bootstrap": "^4.0.0-alpha.6",
+    "cloudinary-react": "^1.7.0",
+    "material-ui-dropzone": "^3.5.0",
     "react": "^17.0.1",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^0.32.1",
     "react-cookie": "^4.0.3",
+    "react-currency-input-field": "^3.3.1",
+    "react-dadata-suggestions": "^2.0.0",
     "react-dom": "^17.0.1",
+    "react-google-maps": "^9.4.5",
+    "react-google-maps-loader": "^4.3.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router": "^5.2.0",
     "react-scripts": "4.0.2",
+    "use-places-autocomplete": "^1.9.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
@@ -44,8 +54,15 @@
   "devDependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@reach/combobox": "^0.14.0",
+    "axios": "^0.21.1",
     "formik": "^2.2.6",
+    "http-proxy-middleware": "^1.1.0",
     "prop-types": "^15.7.2",
+    "react-dadata": "^2.9.3",
+    "react-geocode": "^0.2.3",
+    "react-google-autocomplete": "^1.2.6",
+    "react-native-google-places-autocomplete": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "universal-cookie": "^4.0.4",
     "yup": "^0.32.9"
