--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "cloudinary-react": "^1.7.0",
     "material-ui-dropzone": "^3.5.0",
+    "rc-input-number": "^7.0.3",
     "react": "^17.0.1",
     "react-awesome-slider": "^4.1.0",
     "react-bootstrap": "^0.32.1",
@@ -21,6 +22,8 @@
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
     "react-google-maps-loader": "^4.3.0",
+    "react-number-format": "^4.5.3",
+    "react-numeric-input": "^2.2.3",
     "react-places-autocomplete": "^7.3.0",
     "react-router": "^5.2.0",
     "react-scripts": "4.0.2",
@@ -58,6 +61,8 @@
     "axios": "^0.21.1",
     "formik": "^2.2.6",
     "http-proxy-middleware": "^1.1.0",
+    "material-ui-number-input": "^5.0.24",
+    "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
     "react-dadata": "^2.9.3",
     "react-geocode": "^0.2.3",
