--- a/react-app/package.json
+++ b/react-app/package.json
@@ -22,9 +22,11 @@
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
     "react-google-maps-loader": "^4.3.0",
+    "react-loader-spinner": "^4.0.0",
     "react-number-format": "^4.5.3",
     "react-numeric-input": "^2.2.3",
     "react-places-autocomplete": "^7.3.0",
+    "react-preloader-icon": "^1.0.0",
     "react-router": "^5.2.0",
     "react-scripts": "4.0.2",
     "use-places-autocomplete": "^1.9.1",
@@ -67,6 +69,7 @@
     "react-dadata": "^2.9.3",
     "react-geocode": "^0.2.3",
     "react-google-autocomplete": "^1.2.6",
+    "react-loading-icons": "^1.0.4",
     "react-native-google-places-autocomplete": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "universal-cookie": "^4.0.4",
