Изменения страницы просмотра квартиры.

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.0.0-alpha.6",
     "cloudinary-react": "^1.7.0",
     "material-ui-dropzone": "^3.5.0",
+    "mui-image-slider": "^1.0.7",
     "rc-input-number": "^7.0.3",
     "react": "^17.0.1",
     "react-awesome-slider": "^4.1.0",
@@ -29,6 +30,7 @@
     "react-preloader-icon": "^1.0.0",
     "react-router": "^5.2.0",
     "react-scripts": "4.0.2",
+    "swiper": "^6.5.4",
     "use-places-autocomplete": "^1.9.1",
     "web-vitals": "^1.1.0"
   },
@@ -62,10 +64,13 @@
     "@reach/combobox": "^0.14.0",
     "axios": "^0.21.1",
     "formik": "^2.2.6",
+    "fotorama-react-wrapper": "^1.0.7",
     "http-proxy-middleware": "^1.1.0",
     "material-ui-number-input": "^5.0.24",
+    "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
     "prop-types": "^15.7.2",
+    "react-bnb-gallery": "^1.4.4",
     "react-dadata": "^2.9.3",
     "react-geocode": "^0.2.3",
     "react-google-autocomplete": "^1.2.6",
