--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,18 @@
         </dependency>
         <!--#####################################-->
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.19.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
