--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,9 @@ jwt.expiration.refresh=${EXPARATION_TIME_REFRESH:84600000}
 
 server.port=${SERVER_PORT:8081}
 
+#For TESTING ONLY
+spring.datasource.hikari.maximum-pool-size=2 
+
+
 
 
