--- a/react-app/package.json
+++ b/react-app/package.json
@@ -9,14 +9,12 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "@unicef/material-ui-currency-textfield": "^0.8.6",
-    "bootstrap": "^4.0.0-alpha.6",
     "cloudinary-react": "^1.7.0",
     "material-ui-dropzone": "^3.5.0",
     "mui-image-slider": "^1.0.7",
     "rc-input-number": "^7.0.3",
     "react": "^17.0.1",
     "react-awesome-slider": "^4.1.0",
-    "react-bootstrap": "^0.32.1",
     "react-cookie": "^4.0.3",
     "react-currency-input-field": "^3.3.1",
     "react-dadata-suggestions": "^2.0.0",
@@ -77,6 +75,7 @@
     "react-loading-icons": "^1.0.4",
     "react-native-google-places-autocomplete": "^2.2.0",
     "react-router-dom": "^5.2.0",
+    "react-tabs": "^3.2.2",
     "universal-cookie": "^4.0.4",
     "yup": "^0.32.9"
   }
