--- a/react-app/package.json
+++ b/react-app/package.json
@@ -5,6 +5,7 @@
   "proxy": "http://127.0.0.1:8081/",
   "dependencies": {
     "@autoaddress.ie/autoaddress-react": "^1.0.5",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
