Убраны конфликтующие тесты

--- a/react-app/package.json
+++ b/react-app/package.json
@@ -10,12 +10,15 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "@unicef/material-ui-currency-textfield": "^0.8.6",
+    "bootstrap": "^4.0.0-alpha.6",
     "cloudinary-react": "^1.7.0",
     "material-ui-dropzone": "^3.5.0",
     "mui-image-slider": "^1.0.7",
     "rc-input-number": "^7.0.3",
     "react": "^17.0.1",
     "react-awesome-slider": "^4.1.0",
+    "react-bootstrap": "^0.32.1",
+    "react-bootstrap-validation": "^0.1.11",
     "react-cookie": "^4.0.3",
     "react-currency-input-field": "^3.3.1",
     "react-dadata-suggestions": "^2.0.0",
