--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ jwt.secret=${JWT_SECRET:secret}
 jwt.expiration.access=${EXPARATION_TIME_ACCESS:900000}
 jwt.expiration.refresh=${EXPARATION_TIME_REFRESH:84600000}
 
-server.port=${SERVER_PORT:8081}
+server.port=${PORT:8081}
 
 #For TESTING ONLY
 spring.datasource.hikari.maximum-pool-size=2
