--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,6 +12,7 @@
     "@unicef/material-ui-currency-textfield": "^0.8.6",
     "bootstrap": "^4.0.0-alpha.6",
     "cloudinary-react": "^1.7.0",
+    "dt-format": "^1.0.8",
     "material-ui-dropzone": "^3.5.0",
     "mui-image-slider": "^1.0.7",
     "rc-input-number": "^7.0.3",
@@ -32,6 +33,7 @@
     "react-preloader-icon": "^1.0.0",
     "react-router": "^5.2.0",
     "react-scripts": "4.0.2",
+    "rud": "^1.0.5",
     "swiper": "^6.5.4",
     "use-places-autocomplete": "^1.9.1",
     "web-vitals": "^1.1.0"
@@ -74,6 +76,7 @@
     "prop-types": "^15.7.2",
     "react-bnb-gallery": "^1.4.4",
     "react-dadata": "^2.9.3",
+    "react-datepicker": "^3.8.0",
     "react-geocode": "^0.2.3",
     "react-google-autocomplete": "^1.2.6",
     "react-loading-icons": "^1.0.4",
