--- a/react-app/package.json
+++ b/react-app/package.json
@@ -2,7 +2,7 @@
   "name": "react-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://flats-io.herokuapp.com/",
+  "proxy": "https://peaceful-savannah-81579.herokuapp.com/",
   "dependencies": {
     "@autoaddress.ie/autoaddress-react": "^1.0.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
