--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,13 +89,13 @@ jobs:
           default: false
           description: Push all Dockerfiles in the directory to Heroku.
           type: boolean
+    staging:
+      commands:
+        - |
+          machine api.heroku.com
+            login $HEROKU_EMAIL
+            password $HEROKU_TOKEN
     steps:
-      - staging:
-        - commands:
-            - |
-              machine api.heroku.com
-                login $HEROKU_EMAIL
-                password $HEROKU_TOKEN
       - run: docker build -t trppflats . --build-arg JAR_FILE=target/flats-0.0.1.jar
       - run: docker tag trppflats registry.heroku.com/peaceful-savannah-81579/web
       - run:
