--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,9 +103,12 @@ jobs:
       - run: mvn install
       - run: docker build -t trppflats . --build-arg JAR_FILE=target/flats-0.0.1.jar
       - run: docker tag trppflats registry.heroku.com/peaceful-savannah-81579/web
+#      - run:
+#         command: heroku container:login
+#         name: Login to Heroku Docker image registry
       - run:
-         command: heroku container:login
-         name: Login to Heroku Docker image registry
+          command: 'heroku container:login'
+          name: Login to Heroku Docker image registry
       - run:
          command: |
            docker push registry.heroku.com/peaceful-savannah-81579/web
