--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,15 +101,22 @@ jobs:
       - setup_remote_docker
       - checkout
       - run: mvn install
-      - run: docker build -t trppflats . --build-arg JAR_FILE=target/flats-0.0.1.jar
-      - run: docker tag trppflats registry.heroku.com/peaceful-savannah-81579/web
+#      - run: docker build -t trppflats . --build-arg JAR_FILE=target/flats-0.0.1.jar
+#      - run: docker tag trppflats registry.heroku.com/peaceful-savannah-81579/web
+      - run:
+          name: Heroku
+          command: |
+            docker login --username=$HEROKU_EMAIL --password=$HEROKU_API_KEY registry.heroku.com
+            docker build -t trppflats . --build-arg JAR_FILE=target/flats-0.0.1.jar
+            docker tag trppflats registry.heroku.com/peaceful-savannah-81579/web
+            docker push registry.heroku.com/peaceful-savannah-81579/web
 #      - run:
 #         command: heroku container:login
 #         name: Login to Heroku Docker image registry
-      - run:
-          command: 'heroku container:login'
-          name: Login to Heroku Docker image registry
-      - run:
-         command: |
-           docker push registry.heroku.com/peaceful-savannah-81579/web
-         name: Push Docker image to Heroku
+#      - run:
+#          command: 'heroku container:login'
+#          name: Login to Heroku Docker image registry
+#      - run:
+#         command: |
+#           docker push registry.heroku.com/peaceful-savannah-81579/web
+#         name: Push Docker image to Heroku
