--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,12 +28,12 @@ workflows:
           filters:
             branches:
               only: master
-      - release_heroku_app:
-          requires:
-            - push_docker_image
-          filters:
-            branches:
-              only: master
+#      - release_heroku_app:
+#          requires:
+#            - push_docker_image
+#          filters:
+#            branches:
+#              only: master
 
 jobs:
   build:
@@ -72,50 +72,63 @@ jobs:
             git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
 
   push_docker_image:
-    docker:
-      - image: circleci/openjdk:latest
-      - image: docker:17.05.0-ce-git
+    machine: true
 
-    parametrs:
-      api-key:
-        default: $HEROKU_API_KEY
-        description: The name of the environment variable containing your Heroku API Key.
-        type: env_var_name
-        app-name:
-          default: $HEROKU_APP_NAME
-          description: The name of your Heroku App. For backwards compatibility the literal value `$HEROKU_APP_NAME` is the default, so you can easily use this command by setting an environment variable called HEROKU_APP_NAME
-          type: string
-        no_output_timeout:
-          default: 10m
-          description: Allows you to specify the no_output_timeout for the `git push` to heroku. Defaults to 10m.
-          type: string
-        process-types:
-          default: "web"
-          description: Process types.
-          type: string
-        recursive:
-          default: false
-          description: Push all Dockerfiles in the directory to Heroku.
-          type: boolean
-    staging:
-      commands:
-        - |
-          machine api.heroku.com
-            login $HEROKU_EMAIL
-            password $HEROKU_TOKEN
+#    parametrs:
+#      api-key:
+#        default: $HEROKU_API_KEY
+#        description: The name of the environment variable containing your Heroku API Key.
+#        type: env_var_name
+#        app-name:
+#          default: $HEROKU_APP_NAME
+#          description: The name of your Heroku App. For backwards compatibility the literal value `$HEROKU_APP_NAME` is the default, so you can easily use this command by setting an environment variable called HEROKU_APP_NAME
+#          type: string
+#        no_output_timeout:
+#          default: 10m
+#          description: Allows you to specify the no_output_timeout for the `git push` to heroku. Defaults to 10m.
+#          type: string
+#        process-types:
+#          default: "web"
+#          description: Process types.
+#          type: string
+#        recursive:
+#          default: false
+#          description: Push all Dockerfiles in the directory to Heroku.
+#          type: boolean
+#    staging:
+#      commands:
+#        - |
+#          machine api.heroku.com
+#            login $HEROKU_EMAIL
+#            password $HEROKU_TOKEN
     steps:
       - setup_remote_docker
       - checkout
       - run: mvn install
+      - run: |
+        docker login --username=$HEROKU_EMAIL --password=$HEROKU_API_KEY registry.heroku.com
+        docker build -t trppflats . --build-arg JAR_FILE=target/flats-0.0.1.jar
+        docker tag trppflats registry.heroku.com/peaceful-savannah-81579/web
+        docker push registry.heroku.com/peaceful-savannah-81579/web
+      - run:
+          name: Deploy to Heroku
+          command: |
+          heroku container:release web --app $HEROKU_APP_NAME
+
+
+
+#      - setup_remote_docker
+#      - checkout
+#      - run: mvn install
 #      - run: docker build -t trppflats . --build-arg JAR_FILE=target/flats-0.0.1.jar
 #      - run: docker tag trppflats registry.heroku.com/peaceful-savannah-81579/web
-      - run:
-          name: Heroku
-          command: |
-            docker login --username=$HEROKU_EMAIL --password=$HEROKU_API_KEY registry.heroku.com
-            docker build -t trppflats . --build-arg JAR_FILE=target/flats-0.0.1.jar
-            docker tag trppflats registry.heroku.com/peaceful-savannah-81579/web
-            docker push registry.heroku.com/peaceful-savannah-81579/web
+#      - run:
+#          name: Heroku
+#          command: |
+#            docker login --username=$HEROKU_EMAIL --password=$HEROKU_API_KEY registry.heroku.com
+#            docker build -t trppflats . --build-arg JAR_FILE=target/flats-0.0.1.jar
+#            docker tag trppflats registry.heroku.com/peaceful-savannah-81579/web
+#            docker push registry.heroku.com/peaceful-savannah-81579/web
 #      - run:
 #          name: Deploy to Heroku
 #          command: |
@@ -130,12 +143,12 @@ jobs:
 #         command: |
 #           docker push registry.heroku.com/peaceful-savannah-81579/web
 #         name: Push Docker image to Heroku
-  release_heroku_app:
-    machine: true
-    steps:
-      - checkout
-      - run: heroku --version
-      - run:
-          name: Deploy to Heroku
-          command: |
-            heroku container:release web
+#  release_heroku_app:
+#    machine: true
+#    steps:
+#      - checkout
+#      - run: heroku --version
+#      - run:
+#          name: Deploy to Heroku
+#          command: |
+#            heroku container:release web
