--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,7 @@ jobs:
 #            login $HEROKU_EMAIL
 #            password $HEROKU_TOKEN
     steps:
-      - setup_remote_docker
+#      - setup_remote_docker
       - checkout
       - run: mvn install
       - run: |
