--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,13 +117,15 @@ jobs:
             java -version
       - checkout
       - run: mvn package
-      - run: |
-          docker login --username=$HEROKU_EMAIL --password=$HEROKU_API_KEY registry.heroku.com
-          docker build -t trppflats . --build-arg JAR_FILE=target/flats-0.0.1.jar
-          docker tag trppflats registry.heroku.com/peaceful-savannah-81579/web
-          docker push registry.heroku.com/peaceful-savannah-81579/web
       - run:
-          name: Deploy to Heroku
+          name: Build and push docker image
+          command: |
+            docker login --username=$HEROKU_EMAIL --password=$HEROKU_API_KEY registry.heroku.com
+            docker build -t trppflats . --build-arg JAR_FILE=target/flats-0.0.1.jar
+            docker tag trppflats registry.heroku.com/peaceful-savannah-81579/web
+            docker push registry.heroku.com/peaceful-savannah-81579/web
+      - run:
+          name: Release to Heroku
           command: |
             heroku container:release web
 
