--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,8 +122,8 @@ jobs:
           command: |
             docker login --username=$HEROKU_EMAIL --password=$HEROKU_API_KEY registry.heroku.com
             docker build -t trppflats . --build-arg JAR_FILE=target/flats-0.0.1.jar
-            docker tag trppflats registry.heroku.com/peaceful-savannah-81579/web
-            docker push registry.heroku.com/peaceful-savannah-81579/web
+            docker tag trppflats registry.heroku.com/$HEROKU_APP_NAME_DOCKER/web
+            docker push registry.heroku.com/$HEROKU_APP_NAME_DOCKER/web
       - run:
           name: Release to Heroku
           command: |
